--- a/vagrantfile
+++ b/vagrantfile
@@ -18,6 +18,9 @@ Vagrant.configure("2") do |config|
     # put the box on the network so we can participate in multi-host networking
     config.vm.network "public_network"
 
+    # The "Vagrant was unable to mount VirtualBox shared folders." but is back. Disabling for now.
+    config.vm.synced_folder ".", "/vagrant", disabled: true
+
     config.vm.provider "virtualbox" do |v|
         v.gui = false
         v.customize ["modifyvm", :id, "--rtcuseutc", "on"]
